<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        tools:context=".OnBoardingActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutYear"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/category">

            <AutoCompleteTextView
                android:id="@+id/auto_complete_txt_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                app:layout_anchor="@+id/textInputLayout"
                app:layout_anchorGravity="center" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutBranch"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/level">

            <AutoCompleteTextView
                android:id="@+id/auto_complete_txt_level"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                app:layout_anchor="@+id/textInputLayout"
                app:layout_anchorGravity="center" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutDepartment"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/location">

            <AutoCompleteTextView
                android:id="@+id/auto_complete_txt_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                app:layout_anchor="@+id/textInputLayout"
                app:layout_anchorGravity="center" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroupTag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <!-- Chips can be declared here, or added dynamically. -->
            <com.google.android.material.chip.Chip
                android:id="@+id/chip_tag_1"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/music_events" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_tag_2"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/dance_concerts" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_tag_3"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/food_festival" />

        </com.google.android.material.chip.ChipGroup>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPurpose"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/gender">

            <AutoCompleteTextView
                android:id="@+id/auto_complete_txt_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                app:layout_anchor="@+id/textInputLayout"
                app:layout_anchorGravity="center" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroupHobbies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <!-- Chips can be declared here, or added dynamically. -->
            <com.google.android.material.chip.Chip
                android:id="@+id/chip_1"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/management" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_2"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/host" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_3"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/photography" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_4"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/dj_console" />

        </com.google.android.material.chip.ChipGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/done"
            android:layout_marginTop="20dp"
            android:id="@+id/btnDone">

        </Button>



    </LinearLayout>

</ScrollView>